--- a/config/php.ini
+++ b/config/php.ini
@@ -1,4 +1,4 @@
-date.timezone=America/Vancouver
+date.timezone= "${TZ}"
 display_errors=Off
 log_errors=On
 error_log=/dev/stderr
@@ -6,7 +6,7 @@ error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 256M
+memory_limit = 512M
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
 upload_max_filesize = 50M
